# paprika

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
scenes/cbox/: cbox.lua
scenes/matpreview/: 1.trimesh  2.trimesh  3.trimesh  matpreview.lua
src/: libpaprika_export.hpp  paprika.cpp
src/OSL/: background.h  sampling.h  shading.cpp  shading.h
src/api/: paprikaapi.cpp  paprikaapi.hpp
src/cameras/: perspectivecamera.cpp  perspectivecamera.hpp
src/core/: camera.cpp  camera.hpp  debug.cpp  debug.hpp  generator.cpp  generator.hpp  geometry.cpp  geometry.hpp  mc.cpp  mc.hpp  parametermap.cpp  parametermap.hpp  paramitem.cpp  paramitem.hpp  paramtype.cpp  paramtype.hpp  primitive.cpp  primitive.hpp  projectivecamera.cpp  projectivecamera.hpp  referenced.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shape.cpp  shape.hpp
src/generators/: luagenerator.cpp  luagenerator.hpp  trimeshgenerator.cpp  trimeshgenerator.hpp
src/generators/lua-5.1.5/etc/: all.c
src/paprika.vs2013/: paprika.sln
src/paprika.vs2013/libpaprika/: libpaprika.vcxproj  libpaprika.vcxproj.filters
src/paprika.vs2013/paprika/: paprika.vcxproj  paprika.vcxproj.filters
src/renderers/: debugrenderer.cpp  debugrenderer.hpp  directlighting.cpp  directlighting.hpp  pathtracer.cpp  pathtracer.hpp
src/shapes/: mesh.cpp  mesh.hpp  sphere.cpp  sphere.hpp  triangulate.cpp  triangulate.hpp
